# task_Solana_2026

./: Anchor.toml  Cargo.toml  package.json  tsconfig.json
programs/crafting/: Cargo.toml
programs/crafting/src/: lib.rs
programs/item_nft/: Cargo.toml
programs/item_nft/src/: lib.rs
programs/magic_token/: Cargo.toml
programs/magic_token/src/: lib.rs
programs/marketplace/: Cargo.toml
programs/marketplace/src/: lib.rs
programs/resource_manager/: Cargo.toml
programs/resource_manager/src/: lib.rs
programs/search/: Cargo.toml
programs/search/src/: lib.rs
tests/: crafting.ts  item_nft.ts  magic_token.ts  marketplace.ts  resource_manager.ts  search.ts
