[package]
name = "item_nft"
version = "0.1.0"
description = "Manages Metaplex NFT items for the Kozatsky Business game"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "item_nft"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
mpl-token-metadata = "4.1"
