[package]
name = "magic_token"
version = "0.1.0"
description = "Manages the MagicToken SPL Token-2022 mint for the Kozatsky Business game"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "magic_token"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
