[package]
name = "marketplace"
version = "0.1.0"
description = "NFT marketplace program for the Kozatsky Business game"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "marketplace"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
mpl-token-metadata = { workspace = true }
magic_token = { path = "../magic_token", features = ["cpi"] }
item_nft = { path = "../item_nft", features = ["cpi"] }
