[package]
name = "resource_manager"
version = "0.1.0"
description = "Manages SPL Token-2022 resource mints for the Kozatsky Business game"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "resource_manager"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
spl-token-2022 = { workspace = true }
spl-token-metadata-interface = "0.3"
