[package]
name = "search"
version = "0.1.0"
description = "Resource search program with 60-second cooldown for the Kozatsky Business game"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "search"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
resource_manager = { path = "../resource_manager", features = ["cpi"] }
